--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 </head>
 <body>
     <div class="card">
-        <img src="https://images.unsplash.com/photo-1557862921-37829c790f19?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Profile Picture">
+        <img src="tugas.jpg" alt="Profile Picture">
         <div class="card-content">
             <h2>Saurabh Saini</h2>
             <p>Product Designer at <a href="#">Cedcoss</a></p>
